# rust-crate-compile-test

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example-tests/: run_compile_tests.rs
example-tests/build-fail/fail-1/: Cargo.toml
example-tests/build-fail/fail-1/src/: lib.rs
example-tests/build-fail/fail-2/: Cargo.toml
example-tests/build-fail/fail-2/src/: lib.rs
example-tests/build-fail/fail-3/: Cargo.toml
example-tests/build-fail/fail-3/src/: mod_1.rs
example-tests/build-success/success-1/: Cargo.toml
example-tests/expand/expand-1/: Cargo.toml
example/tests/: run_compile_tests.rs
example/tests/build-fail/fail-1/src/: lib.rs
example/tests/build-fail/fail-3/src/: lib.rs
example/tests/build-fail/fail-4/: Cargo.toml
example/tests/build-fail/fail-4/src/: main.rs
example/tests/build-success/success-1/src/: lib.rs
src/: cargo_messages.rs  config.rs  error.rs  formatting.rs  harness.rs  lib.rs  plan.rs  runner.rs  utils.rs
src/steps/: build.rs  check_errors.rs  check_expansion.rs  collect_errors.rs  mod.rs
tests/: plan.rs  run_compile_tests.rs  steps.rs
tests/builtin_steps/: build.rs  check_errors.rs  check_expansion.rs  collect_errors.rs  mod.rs
tests/ui/: complete.additional_steps.output  complete.failure.output  complete.filter.output  complete.multiple.output  complete.success.output  complete.unexpected_failure.output  complete.unexpected_success.output  fail-1.build.output  fail-1.check_errors.output  fail-3.check_errors.output  fail-4.check_errors.output
tests/utils/: mod.rs
(+5 files in other folders)
