[package]
name = "crate-compile-test"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]

[dependencies]
walkdir = "2.1"
failure = "0.1"
tempfile = "3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.0"
lazy_static = "1.0"

[dev-dependencies]
pretty_assertions = "0.5"