[package]
name = "crate-compile-test"
version = "0.2.0"
description = "Crate Compilation Test helper"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
repository = "https://github.com/denzp/rust-crate-compile-test"
readme = "README.md"
license = "MIT"

exclude = [
    "tests/**/*",
]

[dependencies]
walkdir = "2.1"
failure = "0.1"
tempfile = "3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.0"
lazy_static = "1.0"
colored = "1.6"

[dev-dependencies]
pretty_assertions = "0.5"

[badges]
travis-ci = { repository = "denzp/rust-crate-compile-test", branch = "master" }